# sensors

./: .gitignore  checksum.c  fundamentals.md  pyproject.toml
HW1/: checksum
HW2/: psi  psi.c
HW3/: harness.py  makefile  tpms.c
HW4/: hw4.ipynb
project/: README.md  docker-compose.yml  main.c
project/broker/: Dockerfile  enntrypoint.sh  logger.sh  mosquitto.conf
project/gateway/: Dockerfile  gateway.py  requirements.txt  supervisord.conf
project/monitoring/: mqtt-explorer-config.yml  prometheus.yml
project/monitoring/grafana/provisioning/datasources/: prometheus.yml
project/monitoring/prometheus/: prometheus.yaml
project/vapi/: Dockerfile  README.md  vehicle_api  vehicle_api.h
